syntax = "proto3";

option go_package = "emulator/proto/urd/types";

package urd.types;

//import "proto/third_party/timestamp.proto";
import "proto/crypto/merkle/proof.proto";

message Part {
    int64 view = 1;
    int32 round = 2;
    bytes bytes = 3;
    crypto.merkle.Proof proof = 4;
    string ChainID = 5;
}

message PartSetHeader {
    int64 total = 1;
    bytes root = 2;
    int64 view = 3;
    int32 round = 4;
    string ChainID = 5;
}

message Proposal {
    uint32 vote_type = 1;
    
    PartSetHeader header = 2;
    int32 proposer_index = 3;
    bytes block_header_hash = 4;

    string signature = 5;
}